<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/user"
            android:layout_margin="16dp"
            android:textSize="25sp"
            android:onClick="onDrawerItemClick"/>

        <ImageView
            android:id="@+id/idLogout"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_transfer_within_a_station_black_24dp"
            tools:ignore="InvalidId"
            android:onClick="onDrawerItemClick">
        </ImageView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/idAllNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/all_notes"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:onClick="onDrawerItemClick"/>

    <TextView
        android:id="@+id/id_Notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/notes"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:onClick="onDrawerItemClick"/>

    <TextView
        android:id="@+id/idLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/lists"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:onClick="onDrawerItemClick"/>

    <TextView
        android:id="@+id/idReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/reminders"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:onClick="onDrawerItemClick"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/idBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/basket"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:onClick="onDrawerItemClick"/>

    <TextView
        android:id="@+id/idFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/favorites"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:onClick="onDrawerItemClick"/>


</LinearLayout>