<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:minWidth="1200dp"
    android:minHeight="200dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_setting_title"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_setting_size"
        android:textSize="14sp"
        android:layout_margin="5dp"/>

    <Spinner
        android:id="@+id/dialog_spinner_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_setting_choose_color"
        android:textSize="14sp"
        android:layout_margin="5dp"/>

    <RadioGroup
        android:id="@+id/dialog_radioGroupColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/radio_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:buttonTint="@color/radiobutton_red"/>

        <RadioButton
            android:id="@+id/radio_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:buttonTint="@color/radiobutton_green"/>

        <RadioButton
            android:id="@+id/radio_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:buttonTint="@color/radiobutton_blue"/>

        <RadioButton
            android:id="@+id/radio_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:checked="true"
            android:buttonTint="@color/radiobutton_black"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_apply_settings"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_setting_choose_apply"
        android:background = "@drawable/login_buttton"
        android:layout_margin="5dp"/>

</LinearLayout>